Use RecursiveDo instead of mfix

--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -76,6 +76,7 @@ executable dynasty
     PatternSynonyms
     RankNTypes
     RecordWildCards
+    RecursiveDo
     ScopedTypeVariables
     StandaloneDeriving
     TupleSections
