--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -18,6 +18,7 @@ executable dynasty
   main-is: Main.hs
 
   other-modules:
+    Utils
     Language.Dynasty.Frontend.Syntax
     Language.Dynasty.Frontend.Parser
     Language.Dynasty.Runtime.Val
@@ -37,6 +38,8 @@ executable dynasty
     , mtl ^>= 2.2.2
     , optparse-applicative ^>= 0.16.1
     , parsec ^>= 3.1.14
+    , text ^>= 1.2.4
+    , vector ^>= 0.12.3
 
   ghc-options:
     -threaded
