Make Val ctors strict and use `Vector`

--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -75,6 +75,7 @@ executable dynasty
     MultiParamTypeClasses
     MultiWayIf
     NamedFieldPuns
+    OverloadedLists
     OverloadedStrings
     PatternSynonyms
     RankNTypes
