--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -33,10 +33,12 @@ executable dynasty
     array ^>= 0.5.4
     , base >=4.14 && <5
     , containers ^>= 0.6.4
+    , filepath ^>= 1.4.2
     , megaparsec ^>= 9.2
     , mtl ^>= 2.3
     , optparse-applicative ^>= 0.17
     , parser-combinators ^>= 1.3
+    , process ^>= 1.6.14
     , text ^>= 2
     , vector ^>= 0.12.3
 
