--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -39,6 +39,7 @@ executable dynasty
     , optparse-applicative ^>= 0.17
     , parser-combinators ^>= 1.3
     , process ^>= 1.6.14
+    , scientific ^>= 0.3.7
     , text ^>= 2
     , vector ^>= 0.12.3
 
