--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -57,6 +57,12 @@ executable dynasty
     -Wprepositive-qualified-module
     -Wmissing-deriving-strategies
     -Wunused-packages
+    -Widentities
+    -Wredundant-constraints
+    -Wunticked-promoted-constructors
+    -Wpartial-fields
+    -Wmissing-exported-signatures
+    -Wno-name-shadowing
 
   default-extensions:
     ApplicativeDo
@@ -83,10 +89,15 @@ executable dynasty
     InstanceSigs
     KindSignatures
     LambdaCase
+    MagicHash
     MultiParamTypeClasses
     MultiWayIf
     NamedFieldPuns
+    NegativeLiterals
+    NoMonomorphismRestriction
+    NoStarIsType
     OverloadedStrings
+    PartialTypeSignatures
     PatternSynonyms
     RankNTypes
     RecordWildCards
@@ -98,6 +109,7 @@ executable dynasty
     TypeFamilies
     TypeFamilyDependencies
     TypeOperators
+    UnboxedTuples
     ViewPatterns
 
   default-language: Haskell2010
