--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -61,7 +61,6 @@ executable dynasty
     -Wredundant-constraints
     -Wunticked-promoted-constructors
     -Wpartial-fields
-    -Wmissing-exported-signatures
     -Wno-name-shadowing
 
   default-extensions:
@@ -78,6 +77,7 @@ executable dynasty
     DeriveLift
     DeriveTraversable
     DerivingStrategies
+    DerivingVia
     EmptyCase
     ExistentialQuantification
     FlexibleContexts
@@ -110,6 +110,7 @@ executable dynasty
     TypeFamilyDependencies
     TypeOperators
     UnboxedTuples
+    UndecidableInstances
     ViewPatterns
 
   default-language: Haskell2010
