--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -36,7 +36,7 @@ executable dynasty
 
   build-depends:
     array ^>= 0.5.4
-    , base >=4.14 && <5
+    , base >=4.16 && <5
     , containers ^>= 0.6.4
     , directory ^>= 1.3.7
     , filepath ^>= 1.4.2
@@ -53,65 +53,40 @@ executable dynasty
     -with-rtsopts=-N
     -Wall
     -Wcompat
-    -Wincomplete-uni-patterns
-    -Wprepositive-qualified-module
-    -Wmissing-deriving-strategies
-    -Wunused-packages
     -Widentities
-    -Wredundant-constraints
-    -Wpartial-fields
+    -Wmissing-deriving-strategies
     -Wno-name-shadowing
-    -Wno-star-is-type
     -Wno-unticked-promoted-constructors
+    -Wpartial-fields
+    -Wprepositive-qualified-module
+    -Wredundant-constraints
+    -Wunused-packages
+
+  default-language: GHC2021
 
   default-extensions:
     ApplicativeDo
-    BangPatterns
     BlockArguments
-    ConstraintKinds
     DataKinds
     DefaultSignatures
     DeriveAnyClass
-    DeriveFoldable
-    DeriveFunctor
-    DeriveGeneric
-    DeriveLift
-    DeriveTraversable
     DerivingStrategies
     DerivingVia
-    EmptyCase
-    ExistentialQuantification
-    FlexibleContexts
-    FlexibleInstances
     FunctionalDependencies
     GADTs
     GeneralizedNewtypeDeriving
-    ImportQualifiedPost
-    InstanceSigs
-    KindSignatures
     LambdaCase
     MagicHash
-    MultiParamTypeClasses
     MultiWayIf
-    NamedFieldPuns
     NegativeLiterals
-    NoMonomorphismRestriction
+    NoStarIsType
     OverloadedStrings
     PartialTypeSignatures
     PatternSynonyms
-    RankNTypes
     RecordWildCards
     RecursiveDo
-    ScopedTypeVariables
-    StandaloneDeriving
-    StarIsType
-    TupleSections
-    TypeApplications
     TypeFamilies
     TypeFamilyDependencies
-    TypeOperators
     UnboxedTuples
     UndecidableInstances
     ViewPatterns
-
-  default-language: Haskell2010
