--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -79,6 +79,7 @@ executable dynasty
     MagicHash
     MultiWayIf
     NegativeLiterals
+    NoMonomorphismRestriction
     NoStarIsType
     OverloadedStrings
     PartialTypeSignatures
