--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -36,7 +36,7 @@ executable dynasty
 
   build-depends:
     array ^>= 0.5.4
-    , base >=4.16 && <5
+    , base >=4.15 && <5
     , containers ^>= 0.6.4
     , directory ^>= 1.3.7
     , filepath ^>= 1.4.2
@@ -54,6 +54,8 @@ executable dynasty
     -Wall
     -Wcompat
     -Widentities
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
     -Wmissing-deriving-strategies
     -Wno-name-shadowing
     -Wno-unticked-promoted-constructors
@@ -62,9 +64,56 @@ executable dynasty
     -Wredundant-constraints
     -Wunused-packages
 
-  default-language: GHC2021
+  default-language: Haskell2010
 
   default-extensions:
+    -- GHC2021
+    BangPatterns
+    BinaryLiterals
+    ConstrainedClassMethods
+    ConstraintKinds
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DoAndIfThenElse
+    EmptyCase
+    EmptyDataDecls
+    EmptyDataDeriving
+    ExistentialQuantification
+    ExplicitForAll
+    FlexibleContexts
+    FlexibleInstances
+    ForeignFunctionInterface
+    GADTSyntax
+    GeneralisedNewtypeDeriving
+    HexFloatLiterals
+    ImplicitPrelude
+    ImportQualifiedPost
+    InstanceSigs
+    KindSignatures
+    MonomorphismRestriction
+    MultiParamTypeClasses
+    NamedFieldPuns
+    NamedWildCards
+    NumericUnderscores
+    PatternGuards
+    PolyKinds
+    PostfixOperators
+    RankNTypes
+    RelaxedPolyRec
+    ScopedTypeVariables
+    StandaloneDeriving
+    StandaloneKindSignatures
+    StarIsType
+    TraditionalRecordSyntax
+    TupleSections
+    TypeApplications
+    TypeOperators
+    TypeSynonymInstances
+
     ApplicativeDo
     BlockArguments
     DataKinds
