--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -24,19 +24,19 @@ executable dynasty
   autogen-modules: Paths_dynasty
 
   other-modules:
-    Utils
-    Language.Dynasty.Syntax
-    Language.Dynasty.Parser
-    Language.Dynasty.Validate
-    Language.Dynasty.Core
-    Language.Dynasty.Simplify
     Language.Dynasty.Codegen
-    Opts
+    Language.Dynasty.Core
+    Language.Dynasty.Desugaring
+    Language.Dynasty.NameResolution
+    Language.Dynasty.Opts
+    Language.Dynasty.Parser
+    Language.Dynasty.Syntax
+    Language.Dynasty.Utils
+    Language.Dynasty.Validation
     Paths_dynasty
 
   build-depends:
-    array ^>= 0.5.4
-    , base >=4.15 && <5
+    base >=4.15 && <5
     , containers ^>= 0.6.4
     , directory ^>= 1.3.7
     , filepath ^>= 1.4.2
@@ -46,6 +46,7 @@ executable dynasty
     , parser-combinators ^>= 1.3
     , scientific ^>= 0.3.7
     , text ^>= 2
+    , transformers ^>= 0.6.0.4
 
   ghc-options:
     -threaded
@@ -121,6 +122,7 @@ executable dynasty
     DeriveAnyClass
     DerivingStrategies
     DerivingVia
+    DuplicateRecordFields
     FunctionalDependencies
     GADTs
     GeneralizedNewtypeDeriving
@@ -133,6 +135,7 @@ executable dynasty
     OverloadedStrings
     PartialTypeSignatures
     PatternSynonyms
+    QuantifiedConstraints
     RecordWildCards
     RecursiveDo
     TypeFamilies
