--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -2,7 +2,7 @@ cabal-version: 3.6
 
 name: dynasty
 version: 0.0.0.0
-synopsis: Dynamically-typed purely functional programming language
+synopsis: A lazy functional language that compiles to JavaScript
 description: Please see the README on GitHub at <https://github.com/aionescu/dynasty#readme>
 homepage: https://github.com/aionescu/dynasty#readme
 bug-reports: https://github.com/aionescu/dynasty/issues
@@ -10,7 +10,7 @@ license: GPL-3.0-only
 license-file: LICENSE.txt
 maintainer: alxi.2001@gmail.com
 copyright: Copyright (C) 2020-2022 Alex Ionescu
-category: Interpreter
+category: Compilers/Interpreters, Language
 build-type: Simple
 extra-source-files: README.md
 
