--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -12,7 +12,10 @@ maintainer: alxi.2001@gmail.com
 copyright: Copyright (C) 2020-2022 Alex Ionescu
 category: Compilers/Interpreters, Language
 build-type: Simple
-extra-source-files: README.md
+
+extra-source-files:
+  README.md
+  CHANGELOG.md
 
 data-files:
   core/runtime.js
