--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -44,6 +44,7 @@ executable dynasty
     , directory ^>= 1.3.7
     , filepath ^>= 1.4.2
     , megaparsec ^>= 9.2
+    , monoidal-containers ^>= 0.6.3
     , mtl ^>= 2.3
     , optparse-applicative ^>= 0.17
     , parser-combinators ^>= 1.3
