--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -1,4 +1,4 @@
-cabal-version: 3.6
+cabal-version: 3.8
 
 name: dynasty
 version: 0.0.0.0
@@ -8,8 +8,8 @@ homepage: https://github.com/aionescu/dynasty#readme
 bug-reports: https://github.com/aionescu/dynasty/issues
 license: GPL-3.0-only
 license-file: LICENSE.txt
-maintainer: alxi.2001@gmail.com
-copyright: Copyright (C) 2020-2022 Alex Ionescu
+maintainer: aaionescu@pm.me
+copyright: Copyright (C) 2020-2023 Alex Ionescu
 category: Compilers/Interpreters, Language
 build-type: Simple
 
@@ -21,7 +21,60 @@ data-files:
   core/runtime.js
   core/**/*.dy
 
+common ghc-flags
+  default-language: GHC2021
+  default-extensions:
+    ApplicativeDo
+    BlockArguments
+    DataKinds
+    DefaultSignatures
+    DeriveAnyClass
+    DerivingVia
+    DuplicateRecordFields
+    FunctionalDependencies
+    GADTs
+    ImplicitParams
+    ImpredicativeTypes
+    LambdaCase
+    LexicalNegation
+    MagicHash
+    MultiWayIf
+    NegativeLiterals
+    NoFieldSelectors
+    NoMonomorphismRestriction
+    NoStarIsType
+    OverloadedLabels
+    OverloadedRecordDot
+    OverloadedStrings
+    PartialTypeSignatures
+    PatternSynonyms
+    QuantifiedConstraints
+    RecordWildCards
+    RecursiveDo
+    TypeFamilyDependencies
+    UnboxedTuples
+    UndecidableInstances
+    UnliftedDatatypes
+    UnliftedNewtypes
+    ViewPatterns
+
+  ghc-options:
+    -threaded
+    -rtsopts
+    -with-rtsopts=-N
+    -Wall
+    -Wcompat
+    -Widentities
+    -Wmissing-deriving-strategies
+    -Wno-name-shadowing
+    -Wpartial-fields
+    -Wprepositive-qualified-module
+    -Wredundant-constraints
+    -Wunused-packages
+
 executable dynasty
+  import: ghc-flags
+
   hs-source-dirs: src
   main-is: Main.hs
   autogen-modules: Paths_dynasty
@@ -39,7 +92,7 @@ executable dynasty
     Paths_dynasty
 
   build-depends:
-    base >=4.16 && <5
+    base >=4.17 && <5
     , containers ^>= 0.6.4
     , directory ^>= 1.3.7
     , filepath ^>= 1.4.2
@@ -51,55 +104,3 @@ executable dynasty
     , scientific ^>= 0.3.7
     , text ^>= 2
     , transformers ^>= 0.6.0.4
-
-  ghc-options:
-    -threaded
-    -rtsopts
-    -with-rtsopts=-N
-    -Wall
-    -Wcompat
-    -Widentities
-    -Wmissing-deriving-strategies
-    -Wno-name-shadowing
-    -Wno-unticked-promoted-constructors
-    -Wpartial-fields
-    -Wprepositive-qualified-module
-    -Wredundant-constraints
-    -Wunused-packages
-
-  default-language: GHC2021
-
-  default-extensions:
-    ApplicativeDo
-    BlockArguments
-    DataKinds
-    DefaultSignatures
-    DeriveAnyClass
-    DerivingStrategies
-    DerivingVia
-    DuplicateRecordFields
-    FunctionalDependencies
-    GADTs
-    GeneralizedNewtypeDeriving
-    LambdaCase
-    LexicalNegation
-    MagicHash
-    MultiWayIf
-    NegativeLiterals
-    NoFieldSelectors
-    NoMonomorphismRestriction
-    NoStarIsType
-    OverloadedLabels
-    OverloadedRecordDot
-    OverloadedStrings
-    PartialTypeSignatures
-    PatternSynonyms
-    QuantifiedConstraints
-    RecordWildCards
-    RecursiveDo
-    TypeFamilies
-    TypeFamilyDependencies
-    UnboxedSums
-    UnboxedTuples
-    UndecidableInstances
-    ViewPatterns
