--- a/dynasty.cabal
+++ b/dynasty.cabal
@@ -15,8 +15,6 @@ build-type: Simple
 
 extra-doc-files:
   CHANGELOG.md
-
-extra-source-files:
   README.md
 
 data-files:
@@ -27,47 +25,20 @@ source-repository head
   type: git
   location: https://github.com/aionescu/dynasty
 
-common ghc-flags
+executable dynasty
   default-language: GHC2021
   default-extensions:
-    ApplicativeDo
     BlockArguments
-    DataKinds
-    DefaultSignatures
-    DeriveAnyClass
-    DerivingVia
-    DuplicateRecordFields
-    FunctionalDependencies
-    GADTs
-    ImplicitParams
-    ImpredicativeTypes
+    DerivingStrategies
     LambdaCase
-    LexicalNegation
-    MagicHash
     MultiWayIf
-    NegativeLiterals
     NoFieldSelectors
-    NoMonomorphismRestriction
-    NoStarIsType
-    OverloadedLabels
     OverloadedRecordDot
     OverloadedStrings
-    PartialTypeSignatures
-    PatternSynonyms
-    QuantifiedConstraints
     RecordWildCards
-    RecursiveDo
-    TypeFamilyDependencies
-    UnboxedTuples
-    UndecidableInstances
-    UnliftedDatatypes
-    UnliftedNewtypes
     ViewPatterns
 
   ghc-options:
-    -threaded
-    -rtsopts
-    -with-rtsopts=-N
     -Wall
     -Wcompat
     -Widentities
@@ -77,9 +48,6 @@ common ghc-flags
     -Wprepositive-qualified-module
     -Wredundant-constraints
     -Wunused-packages
-
-executable dynasty
-  import: ghc-flags
 
   hs-source-dirs: src
   main-is: Main.hs
@@ -98,15 +66,15 @@ executable dynasty
     Paths_dynasty
 
   build-depends:
-    base >=4.18  && <5
+    base >=4.19  && <5
     , containers ^>= 0.6.7
     , directory ^>= 1.3.8
-    , filepath ^>= 1.4.100
-    , megaparsec ^>= 9.4
+    , filepath ^>= 1.4.200
+    , megaparsec ^>= 9.6.1
     , monoidal-containers ^>= 0.6.4
     , mtl ^>= 2.3
     , optparse-applicative ^>= 0.18
     , parser-combinators ^>= 1.3
     , scientific ^>= 0.3.7
-    , text ^>= 2
+    , text ^>= 2.1
     , transformers ^>= 0.6.1
